# glasshouse

./: .gitignore  BUG-REPORT.md  README.md  audit-wiring.json  audit-wiring.md  audit.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
design/: ORIGINAL_BUNDLE_README.md
design/chats/: chat1.md
design/project/: rice file manager.html
design/project/src/: components.jsx  data.jsx
docs/: index.html
scripts/: audit-wiring.mjs  cargo-check.ps1  check-running.ps1  tscheck.ps1  tsconly.ps1  vite-build.ps1  win-build.sh  win-dev.sh  win-install.sh  win-quickbuild.ps1
src/: App.tsx  Miller.tsx  Terminal.tsx  api.ts  components.tsx  data.ts  fuzzy.test.ts  fuzzy.ts  globals.d.ts  paths.test.ts  paths.ts  platform.ts  shellCd.test.ts  shellCd.ts  state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  terminal_probe.rs  watcher.rs
src/handlers/: archive.ts  git.ts  index.ts  misc.ts  nav.ts  selection.ts  tools.ts  types.ts  view.ts
src/styles/: app.css  themes.css
