[package]
name = "glasshouse"
version = "0.0.1"
description = "rice:// file manager — a riced-out Windows file manager"
authors = ["Anthony Johnson"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "glasshouse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-opener = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
sysinfo = "0.32"
notify = "7"
notify-debouncer-full = "0.4"
walkdir = "2"
dunce = "1"
which = "6"
trash = "5"
ignore = "0.4"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
regex = "1"
zip = "2"
sha2 = "0.10"
base64 = "0.22"
similar = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
